# TABenchmark

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: demo_profiles.py  demo_quickstart.py
docs/: ARCHITECTURE.md  MODELS.md  REFERENCES.md  ROADMAP.md  RTD_SETUP.md  VALIDATION.md  build_site.py  conf.py  index.md  model-evolution.dot  model-evolution.html  model-specs.json  references.bib  references.json
docs/api/: core.md  edoc.md  estimation.md  index.md  metrics.md  models.md
docs/design/: adr-001-logit-sue-dial-certificate.md  adr-002-t2-estimation-certificate.md  adr-003-probit-sue-mc-certificate.md  adr-004-proportionality-certificate.md  adr-005-elastic-demand.md  adr-006-learned-model-certification.md  adr-007-combined-distribution-assignment.md  adr-008-boundedly-rational-ue.md  adr-009-side-constrained-ue.md  adr-010-dnl-core.md  adr-011-asymmetric-vi.md  adr-012-dn-kalman.md  adr-013-multiclass.md  adr-014-transit-strategy.md  adr-015-ctm.md  adr-016-ltm.md  adr-017-node-model.md  adr-018-godunov.md  adr-019-vickrey.md  adr-020-merchant-nemhauser.md  adr-021-lp-so-dta.md  adr-022-vi-due.md  adr-023-od-dynamic.md  adr-024-newell-3det.md  adr-025-implicit-ue-nn.md  adr-026-het-gnn.md  adr-027-sumo-marouter.md  adr-028-spsa-sumo.md  adr-029-dtalite-tap.md  adr-030-external-dta-simulators-deferred.md  adr-031-peeta-mahmassani.md  adr-032-simopt-profiles.md  adr-033-xu2024-dataset.md  adr-034-bo4mob-scenarios.md  adr-035-tutorials-visualizer.md  adr-036-external-dynamic-observational-certificate.md  adr-037-sumo-duaiterate.md  adr-038-dtd-cumlog.md  adr-039-matsim.md  adr-040-dtalite-simulation.md  (+6 more)
scenarios/: 0braess-t2.yaml  0braess-t2d.yaml  0braess.yaml  0elastic-tworoute.yaml  0tworoute-probit.yaml  0tworoute-sue.yaml  0tworoute-t2.yaml  0tworoute-t2d.yaml  1siouxfalls-probit.yaml  1siouxfalls-t2.yaml  1siouxfalls.yaml  2anaheim.yaml  3barcelona.yaml  4winnipeg.yaml  5honolulu-xu2024.yaml  6sanfrancisco-xu2024.yaml
src/tabench/: __init__.py  cli.py  viz.py
src/tabench/bottleneck/: __init__.py  builtin.py  due.py  scenario.py  solve.py
src/tabench/core/: __init__.py  budget.py  capabilities.py  factors.py  results.py  rng.py  scenario.py
src/tabench/data/: __init__.py  bo4mob.py  builtin.py  fetcher.py  registry.py  tntp.py  xu2024.py
src/tabench/dnl/: __init__.py  _reference.py  builtin.py  ctm.py  demand.py  fd.py  godunov.py  grid.py  link.py  loader.py  ltm.py  node.py  output.py  scenario.py
src/tabench/dta/: __init__.py  builtin.py  cells.py  scenario.py  solve.py
src/tabench/edoc/: __init__.py  canon.py  field.py  macrorep.py  replay.py  scenario.py  tdsp.py
src/tabench/estimation/: __init__.py  _dynamic_map.py  _proportions.py  base.py  bo4mob_base.py  cascetta1993.py  dn_kalman.py  dynamic_base.py  entropy.py  gls.py  odme_dtalite.py  spiess.py  spsa.py  spsa_sumo.py  yang1992.py
src/tabench/experiments/: __init__.py  bootstrap.py  profiles.py  runner.py
src/tabench/metrics/: __init__.py  _feasibility.py  bottleneck_gaps.py  dnl_gaps.py  dta_gaps.py  due_gaps.py  edoc_gaps.py  estimation.py  estimation_bo4mob.py  estimation_dynamic.py  flows.py  gaps.py  newell_gaps.py  so.py  tdta_gaps.py  transit_gaps.py
src/tabench/models/: __init__.py  _bush.py  _numerics.py  _paths.py  _probit.py  _stoch.py  algb.py  aon.py  base.py  br_ue.py  dtd_cumlog.py  dtd_friesz.py  dtd_horowitz.py  dtd_link.py  dtd_stochastic.py  dtd_swap.py  dtd_swap_sue.py  dtd_unifying.py  elastic.py  evans.py  frank_wolfe.py  gradient_projection.py  het_gnn.py  implicit_ue.py  learned.py  msa.py  multiclass.py  oba.py  sc_tap.py  so.py  sue_logit.py  sue_probit.py  (+2 more)
tests/: conftest.py  test_algb.py  test_bo4mob.py  test_bo4mob_estimation.py  test_bottleneck.py  test_br_ue.py  test_braess.py  test_capabilities_declarations.py  test_certification.py  test_cli.py  test_conjugate_fw.py  test_core.py  test_dn_kalman.py  test_dnl_builtin_bottlenecks.py  test_dnl_certificates.py  test_dnl_ctm.py  test_dnl_demand.py  test_dnl_godunov.py  test_dnl_grid_fd.py  test_dnl_link_reference.py  test_dnl_loader.py  test_dnl_ltm.py  test_dnl_node_axioms.py  test_dnl_scenario.py  test_dnl_tampere_node.py  test_dta_mn.py  test_dta_zil.py  test_dtalite.py  test_dtalite_simulation.py  test_dtd_cumlog.py  test_dtd_friesz.py  test_dtd_horowitz.py  test_dtd_link.py  test_dtd_stochastic.py  test_dtd_swap.py  test_dtd_swap_sue.py  test_dtd_unifying.py  test_due.py  test_edoc.py  test_elastic.py  (+39 more)
tools/: generate_evolution_html.py  generate_models.py  generate_references.py
tutorials/: README.md
tutorials/01-static/: 01-aon.ipynb  02-msa.ipynb  03-fw.ipynb  04-cfw.ipynb  05-bfw.ipynb  06-gp.ipynb  07-oba.ipynb  08-algb.ipynb  09-tapas.ipynb  10-sue-msa.ipynb  11-sue-probit-msa.ipynb  12-so-bfw.ipynb  13-fw-elastic.ipynb  14-evans.ipynb  15-br-ue.ipynb  16-sc-tap.ipynb  17-vi-asym.ipynb  18-multiclass.ipynb  19-learned-surrogate.ipynb
tutorials/02-day-to-day/: 01-dtd-swap.ipynb  02-dtd-swap-sue.ipynb  03-dtd-link.ipynb  04-dtd-friesz.ipynb  05-dtd-horowitz.ipynb  06-dtd-stochastic.ipynb  07-dtd-unifying.ipynb  08-dtd-cumlog.ipynb
tutorials/03-estimation/: 01-gls.ipynb  02-spiess.ipynb  03-vzw-entropy.ipynb  04-od-congested.ipynb  05-spsa.ipynb  06-od-kalman.ipynb  07-od-dynamic.ipynb  08-bo4mob-estimation.ipynb  09-odme-dtalite.ipynb
tutorials/04-transit/: 01-transit-strategy.ipynb
tutorials/05-dnl/: 01-ctm.ipynb  02-ltm.ipynb  03-godunov.ipynb  04-node-model.ipynb
tutorials/06-bottleneck/: 01-vickrey.ipynb  02-vi-due.ipynb
tutorials/07-dta/: 01-merchant-nemhauser.ipynb  02-lp-so-dta.ipynb
tutorials/08-tdta/: 01-pm-td.ipynb
tutorials/09-newell/: 01-newell-3det.ipynb
tutorials/10-learned/: 01-implicit-ue-nn.ipynb  02-het-gnn.ipynb
tutorials/11-external/: 01-sumo-marouter.ipynb  02-sumo-duaiterate.ipynb  03-dtalite-tap.ipynb  04-spsa-sumo.ipynb  05-matsim.ipynb  06-dtalite-simulation.ipynb
tutorials/12-data/: 01-xu2024.ipynb  02-bo4mob.ipynb
tutorials/13-experiments/: 01-profiles.ipynb
(+28 files in other folders)
