[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tabench"
version = "0.1.0"
description = "TABenchmark: a shared benchmark for 50 years of traffic assignment models"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "UMN Choi Lab", email = "chois@umn.edu" }]
keywords = ["traffic assignment", "benchmark", "transportation", "user equilibrium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
tabench = "tabench.cli:main"

[project.urls]
Homepage = "https://github.com/UMN-Choi-Lab/TABenchmark"
Issues = "https://github.com/UMN-Choi-Lab/TABenchmark/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
