[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tabench"
version = "0.2.0"
description = "TABenchmark: a shared benchmark for 50 years of traffic assignment models"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "UMN Choi Lab", email = "chois@umn.edu" }]
keywords = ["traffic assignment", "benchmark", "transportation", "user equilibrium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
# Optional: the learned torch models (implicit-ue-nn, het-gnn). Kept out of the core so
# the benchmark stays numpy/scipy-only (adr-006/adr-025). No upper pin. Note pip
# extras cannot pin an index, so `pip install tabench[torch]` pulls the default
# (CUDA) build on Linux; for CPU-only use, install torch from the CPU wheel index
# first: `pip install torch --index-url https://download.pytorch.org/whl/cpu`.
torch = ["torch>=2.4"]

[project.scripts]
tabench = "tabench.cli:main"

[project.urls]
Homepage = "https://github.com/UMN-Choi-Lab/TABenchmark"
Issues = "https://github.com/UMN-Choi-Lab/TABenchmark/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
