[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tabench"
version = "0.2.0"
description = "TABenchmark: a shared benchmark for 50 years of traffic assignment models"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "UMN Choi Lab", email = "chois@umn.edu" }]
keywords = ["traffic assignment", "benchmark", "transportation", "user equilibrium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
# Optional: the learned torch models (implicit-ue-nn, het-gnn). Kept out of the core so
# the benchmark stays numpy/scipy-only (adr-006/adr-025). No upper pin. Note pip
# extras cannot pin an index, so `pip install tabench[torch]` pulls the default
# (CUDA) build on Linux; for CPU-only use, install torch from the CPU wheel index
# first: `pip install torch --index-url https://download.pytorch.org/whl/cpu`.
torch = ["torch>=2.4"]
# Optional: the SUMO external-simulator adapter (sumo-marouter). Kept out of the
# core so the benchmark stays numpy/scipy-only (adr-027). The wheel ships the
# marouter/netconvert binaries inside the package (addressed via sumo.SUMO_HOME).
# Floor only, NOT a hard pin: a `==` in library metadata conflicts with user
# environments. The het-gnn unpinned-dep lesson is solved in the CI WORKFLOW
# (which installs eclipse-sumo==1.27.1 to keep the hardcoded-vdf anchor stable),
# not here in the metadata.
sumo = ["eclipse-sumo>=1.27"]
# Optional: the DTALite static-assignment adapter (dtalite-tap). Kept out of the core
# so the benchmark stays numpy/scipy-only (adr-029). The wheel (~1.3 MB, no declared
# dependencies) ships the compiled TAPLite Frank-Wolfe engine inside the package and
# is driven only via a throwaway subprocess. Floor only, NOT a hard pin: a `==` in
# library metadata conflicts with user environments. The FW/VDF behavior lives in a
# bundled `.so` that can change under the floor, so the CI WORKFLOW pins
# DTALite==0.8.1 (the tested engine) as the anchor tripwire, not here in the metadata.
dtalite = ["DTALite>=0.8"]
# Optional: the house visualizer (tabench.viz) + `demo_quickstart --viz`. Kept out of
# the core so the benchmark stays numpy/scipy-only; the module is never imported by
# `tabench`'s top-level, so `import tabench` works without it. Floor only, NOT a hard pin.
viz = ["matplotlib>=3.8"]
# Optional: execute the tutorial notebooks (tutorials/<NN>-<track>/<MM>-<unit>.ipynb) from
# a cleared state under TABENCH_RUN_TUTORIALS=1 (wired into every CI leg — core job's
# 3.12 leg plus the torch/sumo/dtalite extras jobs, each with its own -k filter). nbclient
# runs them, nbformat reads them, ipykernel supplies the python3 kernel, matplotlib
# because every notebook plots. Floors only, never a hard pin (library metadata must not
# `==`).
tutorials = ["nbclient>=0.10", "nbformat>=5.10", "ipykernel>=6.29", "matplotlib>=3.8"]

[project.scripts]
tabench = "tabench.cli:main"

[project.urls]
Homepage = "https://github.com/UMN-Choi-Lab/TABenchmark"
Issues = "https://github.com/UMN-Choi-Lab/TABenchmark/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
